media/css/DasStyle.css
@charset "UTF-8";
/* CSS Document */
@font-face {
    font-family: "Gill Sans";
    src: local("Gill Sans"), url("/site_media/fonts/GillSans/GillSans.ttf");
    font-weight: normal; font-style: normal;
}
@font-face {
    font-family: "Gill Sans";
    src: local("Gill Sans Bold"), local("GillSans-Bold"), url("/site_media/fonts/GillSans/GillSans-Bold.ttf");
    font-weight: bold; font-style: normal;
}
@font-face {
    font-family: "Gill Sans";
    src: local("Gill Sans Italic"), local("GillSans-Italic"), url("/site_media/fonts/GillSans/GillSans-Italic.ttf");
    font-weight: normal; font-style: italic;
}
@font-face {
    font-family: "Gill Sans";
    src: local("Gill Sans Italic"), local("GillSans-Italic"), url("/site_media/fonts/GillSans/GillSans-Italic.ttf");
    font-weight: normal; font-style: oblique;
}
@font-face {
    font-family: "Gill Sans";
    src: local("Gill Sans Bold Italic"), local("GillSans-BoldItalic"), url("/site_media/fonts/GillSans/GillSans-BoldItalic.ttf");
    font-weight: bold; font-style: italic;
}
@font-face {
    font-family: "Gill Sans";
    src: local("Gill Sans Bold Italic"), local("GillSans-BoldItalic"), url("/site_media/fonts/GillSans/GillSans-BoldItalic.ttf");
    font-weight: bold; font-style: oblique;
}

* { font-family: "Gill Sans", Arial, sans-serif; }
body {
	margin-left: 0px; margin-top: 50px;
	-webkit-text-size-adjust: none;
}

a { text-decoration: none; }
a:link, a:visited, a:active { color: #00837F; }
a:hover { color: #333; }
a.nav-hover>img { border-bottom: 6px solid #fff; }
a.nav-hover.active>img { border-bottom: 6px solid #008180 !important; }


.DASmain {
	position: relative;
	width: 975px;
	margin-left: auto; margin-right: auto;
}
.DAShome { height: 800px; }
.DASresearch, .DASnews { height: 1500px; }
.DASpeople { height: 2500px; }
.DASpub { height: 4250px; }
.DASresources { height: 1725px; }
.DAScontact { height: 1160px; }
.DASerr { height: 500px; }
.DASpwd { height: 700px; }


.TEXT {
	font-size: 14px; line-height: 19px;
	font-weight: normal; text-align: left;
	color: #555;
}
.homeTEXT {
	text-align: justify;
}
.peopleTEXT {
	line-height: 14px;
	color: #666;
}
.yearTEXT {
	font-size: 14px;
	font-weight: normal;
	color: #00817D;
}


.HEAD {
	font-size: 26px;
	color: #333;
}
.researchH2 {
	line-height: 31px;
	font-weight: normal;
}
.peopleH2 {
	font-size: 20px; line-height: 20px;
	font-weight: bold;
	color: #00837F;
}
.publicationsH1 { font-weight: normal; }
.publicationsH2 { font-weight: bold; }
.yearH2 {
	font-size: 36px;
	color: #00817D;
}.contactH1 {
	font-size: 14px; line-height: 14px;
	font-weight: bold;
}
.contactH2 {
	font-size: 18px; line-height: 23px;
	font-weight: bold; text-decoration: none;
}
.contactH3 {
	font-size: 18px; line-height: 23px;
	font-weight: bold;
	color: #007E79;
}

.divisionLine { border-bottom: dotted thin #666; }
.fix { position: absolute;}


#dasLOGO {
	left: 6px; top: 1px;
	width: 156px; height: 83px;
	z-index: 1;
}
#DasNAV {
	left: 225px; top: 30px;
	width: 750px; height: 31px;
	z-index: 2;
}
#DasBANNER {
	left: 2px; top: 100px;
	width: 973px; height: 221px;
	z-index: 3;
}
#DasHEADER {
	left: 673px; top: 25px;
	width: 352px; height: 114px;
	z-index: 1;
}
#DasICON {
	display: none;
	left: 128px; top: 3864px;
	width: 729px; height: 54px;
	z-index: 5;
}
#DasFOOTER {
	display: none;
	left: 57px; top: 3809px;
	width: 855px; height: 53px;
	z-index: 9;
}


#homeTEXT {
	left: 212px; top: 519px;
	width: 436px; height: 110px;
	z-index: 8;
}
#researchBTN {
	left: -53px; top: 119px;
	width: 51px; height: 205px;
	z-index: 1;
}
#whatWeDo {
	left: 67px; top: 520px;
	width: 129px; height: 86px;
	z-index: 6;
}
#weStrive {
	left: 679px; top: 518px;
	width: 226px;height: 103px;
	z-index:7;
}
#ourGoal {
	left: 56px; top: 360px;
	width: 855px; height: 61px;
	z-index: 4;
}
#divisionBar {
	left: 56px; top: 459px;
	width: 855px; height: 38px;
	z-index: 4;
}


.BODY {
	position: absolute;
	left: 56px; top: 360px;
	width: 856px;
	z-index: 8;
}
.BODY-ERR{
	position: absolute;
	left: 72px; top: 100px;
	width: 856px;
	z-index: 8;
}
#contactBODY { height: 529px; }
#newsBODY { height: 830px; }
#pplBODY { height: 2000px; }
#pubBODY { height: 4133px; }
#researchBODY { height: 814px; top: 423px;}
#resourcesBODY { height: 1082px; }

